overflow test fix

--- a/src/App.css
+++ b/src/App.css
@@ -228,14 +228,14 @@ body::-webkit-scrollbar {
 
 .about-section-pin {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   color: var(--primary);
   font-size: 3em;
-
+  overflow: hidden;
 }
 
 .about-img {
